# Extract-and-Load-PoC

./: .gitignore  README.md  latest_scheduled_run_id.txt  package-lock.json  pyproject.toml  requirements.txt  run-all-coverage.cmd
config/: api_config.yaml  current_config.json  ftp_config.yaml  saved_source_configs.json  saved_target_configs.json
data/: output.csv  scheduler_state.json
extract-load-ui/: README.md  angular.json  copy-coverage.js  karma.conf.js  open-coverage.js  package-lock.json  package.json  print-coverage.js  tsconfig.app.json  tsconfig.spec.json
extract-load-ui/package.json     # Need to ensure @angular/cli and karma-coverage are installed/: karma.conf.js    # Create this file if it doesn't exist
extract-load-ui/src/: index.html  main.ts  styles.scss
extract-load-ui/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts  data-template.html  data-template.spec.ts  data-template.ts  pipeline.service.ts
ftp_downloads/: export_1749018387945.parquet  sales_sample1.csv  sales_sample1.json  sales_sample1.parquet
sample_api/: __init__.py  app.py  posts.json
scripts/: api_server.py  input_selector.py  run_pipeline.py
src/: api_client.py  config_loader.py  database.py  ftp_client.py  input_selector.py  logging_utils.py  pipeline.py  retry_utils.py  scheduler.py  schema_generator.py
tests/: test_api_client.py  test_api_server.py  test_config_loader.py  test_database.py  test_ftp_client.py  test_integration_pipeline.py  test_logging_utils.py  test_pipeline.py  test_retry_utils.py  test_scheduler.py  test_schema_generator.py
(+101 files in other folders)
